--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="{% static 'auctions/Untitled.svg' %}" alt="img" width="30" height="24"
@@ -27,7 +27,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav container mx-auto">
           <li class="nav-item">
             <a class="nav-link " href="{% url 'index' %}">Products</a>
           </li>
@@ -48,6 +48,8 @@
               <li><a class="dropdown-item" href="{% url 'category' 'LG' %}">LG</a></li>
             </ul>
           </li>
+        </ul>
+        <ul class="navbar-nav container justify-content-end">
           {% if user.is_authenticated %}
           <span class="navbar-text">
             <strong>User:{{ user.username.capitalize }}</strong>
