--- a/auctions/templates/auctions/listingDetail.html
+++ b/auctions/templates/auctions/listingDetail.html
@@ -78,7 +78,7 @@
             <form class="d-flex flex-row add-comment-section mt-4 mb-4" action="{% url 'addComment' title%}"
                 method="post">
                 {% csrf_token %}
-                <input type="text" class="form-control mr-3" placeholder="Add comment" name="comment">
+                <input type="text" class="form-control mr-3" placeholder="Add comment" name="comment" required=True>
                 <input class="btn btn-primary" type="submit" value="Comment">
             </form>
             {% for comment in comments %}
