--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -19,14 +19,14 @@
         <img src="{% static 'auctions/samsung.jpg' %}" class="d-block w-100" height="500" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5 class="text-dark">Samsung</h5>
-          <p class="text-dark">But latest samsung smartphones at fair price.</p>
+          <p class="text-dark">Buy latest samsung smartphones at fair price.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="{% static 'auctions/lg.webp' %}" class="d-block w-100" height="500" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5 class="text-dark">LG</h5>
-          <p class="text-dark">But LG smartphones</p>
+          <p class="text-dark">Buy LG smartphones</p>
         </div>
       </div>
     </div>
